--- a/src/componentes/Elementos/Modal/styles.module.css
+++ b/src/componentes/Elementos/Modal/styles.module.css
@@ -7,7 +7,7 @@
 	position: fixed;
 	inset: 0;
 	animation: overlayShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
-	z-index: 399;
+	z-index: calc(var(--zindex-final-modal) - 1);
 }
 
 .dialog_conteudo {
@@ -31,7 +31,7 @@
 
     aspect-ratio: 1 / 1.2;
 
-	z-index: 400;
+	z-index: calc(var(--zindex-final-modal) - 0);
 	padding: 1% 0 1% 1%;
 
 	overflow-y: auto;
