--- a/src/componentes/ElementosDeJogo/ModalPrimeiroAcesso/styles.module.css
+++ b/src/componentes/ElementosDeJogo/ModalPrimeiroAcesso/styles.module.css
@@ -91,6 +91,13 @@
     flex-direction: column;
 }
 
+#aviso_pendencia {
+    display: flex;
+    flex-direction: column;
+    font-size: .9rem;
+    color: red;
+}
+
 .disclaimer_termo {
     font-size: .9rem;
 }
