--- a/src/app/(sem-cabecalho)/minha-pagina/styles.module.css
+++ b/src/app/(sem-cabecalho)/minha-pagina/styles.module.css
@@ -31,11 +31,37 @@
     flex-direction: column;
     height: 100%;
     flex: .2;
-    padding: .6%;
     gap: 2vh;
-    border: 1px solid #fff;
-    border-radius: 10px;
 }
+
+.secao_contatos {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    gap: 1vh;
+    background-color: rgb(82 82 82 / 14%);
+    padding: 0 2% 1vh;
+    border-radius: .7vw .7vw 0 0;
+}
+
+.topo_secao_contatos {
+    text-align: center;
+}
+
+.recipiente_lista_contatos {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    gap: 2vh;
+}
+/* 
+.secao_contatos::before {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 2vh;
+    background-color: aqua;
+} */
 
 .ficha_existente {
     display: flex;
