--- a/src/componentes/Elementos/PaginaConteudoDinamico/styles.module.css
+++ b/src/componentes/Elementos/PaginaConteudoDinamico/styles.module.css
@@ -6,6 +6,7 @@
     justify-content: center;
     flex: 1;
     margin-bottom: 2vh;
+    font-family: var(--fonte-junge) !important;
 }
 
 .recipiente_titulo {
