--- a/src/app/(sem-cabecalho)/aventuras/styles.module.css
+++ b/src/app/(sem-cabecalho)/aventuras/styles.module.css
@@ -15,37 +15,59 @@
     display: flex;
     flex-direction: row;
     width: 100%;
-    height: 100%;
+    height: 95vh;
     gap: 1vw;
     padding: .5vh .6vw;
 }
 
-#recipiente_aventura_principal, #recipiente_menu_aventuras {
+#recipiente_aventura_selecionada {
     display: flex;
     flex-direction: column;
+    flex: .8;
     background-color: #3122464D;
-    height: 100%;
     border-radius: 1vw;
-    overflow: auto;
 }
 
-#recipiente_aventura_principal {
-    flex: .8;
+#recipiente_cabecalho_aventura_selecionada {
+    display: flex;
+    flex-direction: row;
+    height: 24%;
+    padding: 1% 2%;
+}
+
+#recipiente_capa_cabecalho_aventura_selecionada {
+    position: relative;
+    aspect-ratio: 16 / 9;
+}
+
+#recipiente_corpo_aventura_selecionada {
+    display: flex;
+    flex-direction: column;
+    height: 76%;
 }
 
 #recipiente_menu_aventuras {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    overflow: auto;
     flex: .2;
     padding: 1vh .5vw;
     gap: 2vh;
+    background-color: #3122464D;
+    border-radius: 1vw;
+    scrollbar-width: none;
+    scrollbar-gutter: stable;
 }
 
 .recipiente_item_menu_aventuras {
     display: flex;
     flex-direction: row;
     gap: .3vw;
+    cursor: pointer;
 }
 
-.recipiente_imagem_aventura {
+.recipiente_imagem_aventura_item_menu {
     position: relative;
     aspect-ratio: 16 / 9;
     width: 40%;
