--- a/src/componentes/ElementosPaginaUsuario/Post/styles.module.css
+++ b/src/componentes/ElementosPaginaUsuario/Post/styles.module.css
@@ -1,3 +1,18 @@
+#recipiente_lista_posts { 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 1%;
+    flex: 1;
+    border: 1px white solid;
+    border-radius: 10px;
+    gap: 1vh;
+}
+
+/*  */
+
+
+
 .recipiente_post {
     width: 100%;
     height: 27%;
