Alterando estrutura de pastas para usar ControladorSlot, para cabeçalho opcional e validação de usuario obrigatorio Alterando retornos do backend para receber code status usuario opcional

--- a/src/app/styles.module.css
+++ b/src/app/styles.module.css
@@ -2,6 +2,13 @@
     font-size: 2em;
 }
 
+#recipiente_conteudo_pagina_principal {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    align-items: center;
+}
+
 #main {
     display: flex;
     flex-direction: column;
