--- a/src/app/(paginas)/em-jogo/styles.module.css
+++ b/src/app/(paginas)/em-jogo/styles.module.css
@@ -1,3 +1,14 @@
+#recipiente_pagina_jogo {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    font-family: 'Crimson Pro', serif;
+    font-variant: small-caps;
+}
+
+/*  */
+
 .secao_unica {
     display: flex;
     flex-direction: column;
