--- a/src/app/(paginas)/em-jogo/styles.module.css
+++ b/src/app/(paginas)/em-jogo/styles.module.css
@@ -113,9 +113,13 @@
 }
 
 #imagem_personagem {
+    position: relative;
     height: 100%;
     aspect-ratio: 1 / 1;
-    background-color: plum;
+}
+
+#imagem_personagem img {
+    transform: scaleX(-1);
 }
 
 .fatia_parte_baixo_atalhos {
@@ -131,10 +135,6 @@
     height: 10%;
     width: 12%;
     justify-content: space-evenly;
-}
-
-.barra_locais * {
-    background-color: rgb(184, 180, 180);
 }
 
 .barras {
