!!!! INSTAVEL No meio do desenvolvimento da evolução da ficha Tenho q fazer o deploy pq ta impactando nas sessoes

--- a/src/app/(paginas)/meus-personagens/styles.module.css
+++ b/src/app/(paginas)/meus-personagens/styles.module.css
@@ -81,3 +81,12 @@
     justify-content: center;
     white-space: nowrap;
 }
+
+#recipiente_botao_evoluir a {
+    display: block;
+    height: 100%;
+}
+
+#recipiente_botao_evoluir button {
+    padding: .6rem;
+}
