--- a/src/app/styles.module.css
+++ b/src/app/styles.module.css
@@ -23,7 +23,7 @@
 
     color: white;
     font-family: 'Crimson Pro', serif;
-    font-variant: small-caps;
+    /* font-variant: small-caps; */
 
     /* max-width: calc(100vh * 16 / 9);
     max-height: calc(100vw * 9 / 16); */
