--- a/src/app/(paginas)/em-jogo/styles.module.css
+++ b/src/app/(paginas)/em-jogo/styles.module.css
@@ -4,7 +4,7 @@
     width: 100%;
     height: 100%;
     font-family: 'Crimson Pro', serif;
-    font-variant: small-caps;
+    /* font-variant: small-caps; */
 }
 
 /*  */
