--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -38,7 +38,7 @@ img {
 a {
   color: inherit;
   text-decoration: none;
-  width: 100%;
+  width: auto;
   cursor: pointer;
   text-decoration: underline;
 }
@@ -47,8 +47,18 @@ html, body, h1, h2, h3, h4, h5, h6, p, span, a, li, td, th, div {
   line-height: 1;
 }
 
-a:hover {
+a:hover, a:hover svg {
   color: #C5AA18;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: var(--fonte-cinzel);
+  font-variant: small-caps;
+}
+
+span, a, p {
+  font-family: var(--fonte-junge);
+  color: #D9D9D9;
 }
 
 svg {
