--- a/src/componentes/ElementosDeJogo/ControladorSwiperFicha/PaginaControleAtributosPericias/styles.module.css
+++ b/src/componentes/ElementosDeJogo/ControladorSwiperFicha/PaginaControleAtributosPericias/styles.module.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     color: white;
     font-family: 'Crimson Pro', serif;
-    font-variant: small-caps;
+    /* font-variant: small-caps; */
     gap: 1vh;
     flex: 1;
     justify-content: space-around;
