- Corrigindo algumas coisas do processo de evolução - Iniciando prototipo tela de sessao - Iniciando prototipo chat

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,8 @@
   --fonte-junge: 'Junge', serif;
 
   --zindex-final-swiperEsquerda: 899;
-  --zindex-final-modal: 999;
+  --zindex-final-chat: 999;
+  --zindex-final-modal: 1099;
 }
 
 * {
