--- a/src/app/(paginas)/meus-personagens/styles.module.css
+++ b/src/app/(paginas)/meus-personagens/styles.module.css
@@ -60,6 +60,7 @@
     display: flex;
     flex-direction: column;
     text-align: start;
+    flex: 1;
 }
 
 .recipiente_informacoes_personagem {
@@ -94,7 +95,6 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    margin-left: 10%;
 }
 
 .recipiente_informacoes2_personagem h2 {
