--- a/src/app/(paginas)/sessao/styles.module.css
+++ b/src/app/(paginas)/sessao/styles.module.css
@@ -1,3 +1,9 @@
+#recipiente_sessao_em_espera {
+    width: 100%;
+    height: 100%;
+    padding: 2%;
+}
+
 #recipiente_pagina_sessao {
     position: relative;
     
