! INSTAVEL ! Chegando até GEP 9, vou fazer alterações para Pericia Livre

--- a/src/app/(paginas)/sessao/styles.module.css
+++ b/src/app/(paginas)/sessao/styles.module.css
@@ -1,7 +1,8 @@
-#recipiente_sessao_em_espera {
+#recipiente_sessao_prevista {
     width: 100%;
     height: 100%;
     padding: 2%;
+    text-align: center;
 }
 
 #recipiente_pagina_sessao {
