--- a/src/app/(paginas)/meus-personagens/styles.module.css
+++ b/src/app/(paginas)/meus-personagens/styles.module.css
@@ -8,6 +8,7 @@
     gap: 5vh;
     font-size: 1.3rem;
     font-family: var(--fonte-cinzel);
+    height: 100%;
 }
 
 .recipiente_avisos_convite_pendentes {
@@ -118,7 +119,27 @@
 }
 
 #recipiente_conteudo_pagina_personagem_selecionado {
+    display: flex;
+    flex-direction: column;
     position: relative;
     width: 100%;
     height: 100%;
+}
+
+#recipiente_abas_fichas {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    width: 100%;
+    margin-top: 3vh;
+    gap: 5vh;
+}
+
+#recipiente_provisorio_atributos {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    gap: 2vw;
+    flex-wrap: wrap;
+    row-gap: 2vh;
 }
