Testado do GEP 0 ao GEP 9 totalmente funcional; Indo para reta final de Pericias Livres

--- a/src/componentes/EdicaoFicha/styles.module.css
+++ b/src/componentes/EdicaoFicha/styles.module.css
@@ -231,6 +231,12 @@
     gap: 1vw;
 }
 
+.botoes_pericia_livre {
+    display: flex;
+    flex-direction: row;
+    gap: 1vw;
+}
+
 .recipiente_elementos_etapa {
     display: flex;
     flex-direction: column;
