--- a/src/componentes/EdicaoFicha/JanelaNotificacaoEvolucao/styles.module.css
+++ b/src/componentes/EdicaoFicha/JanelaNotificacaoEvolucao/styles.module.css
@@ -13,6 +13,7 @@
     border-radius: 0 5px 5px 0;
     overflow-y: visible;
     transition: transform 0.3s ease;
+    z-index: calc(var(--zindex-final-janelas) - 0);
 }
 
 .janela_avisos.fechado {
