--- a/src/componentes/Elementos/Tooltip/styles.module.css
+++ b/src/componentes/Elementos/Tooltip/styles.module.css
@@ -38,7 +38,7 @@
 	will-change: transform, opacity;
 	text-align: justify;
 	max-width: 17vw;
-	z-index: 200;
+	z-index: calc(var(--zindex-final-tooltip) - 0);
 }
 
 .tooltip_conteudo[data-state="delayed-open"][data-side="top"] { animation-name: slideDownAndFade; }
