! INSTAVEL ! Comitando para testar propriedade dinamica de pagina atual

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,7 @@
   --fonte-cinzel: 'Cinzel', serif;
   --fonte-cinzel-decorative: 'Cinzel Decorative', serif;
   --fonte-junge: 'Junge', serif;
+  --fonte-B612Mono: 'B612_Mono', serif;
 
   --zindex-final-janelas: 699;
   --zindex-final-tooltip: 799;
