--- a/src/componentes/ElementosPaginaUsuario/Contato/styles.module.css
+++ b/src/componentes/ElementosPaginaUsuario/Contato/styles.module.css
@@ -111,6 +111,8 @@
 }
 
 .recipiente_informacoes_contato {
+    display: flex;
+    flex-direction: column;
     width: 100%;
     text-align: center;
     padding: .6rem 0;
@@ -119,4 +121,5 @@
 .recipiente_cargos {
     display: flex;
     flex-direction: column;
+    flex: 1;
 }
