--- a/src/app/(paginas)/aventuras/styles.module.css
+++ b/src/app/(paginas)/aventuras/styles.module.css
@@ -32,7 +32,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: 100%;
     padding: 1% 2%;
+    gap: 2vh;
 }
 
 #recipiente_capa_aventura_selecionada {
@@ -43,14 +45,49 @@
     overflow: hidden;
 }
 
-#recipiente_personagens_participantes {
+#recipiente_cabecalho_aventura_selecionada {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    gap: 2vh;
+    text-align: center;
+    align-items: center;
+    justify-items: center;
+}
+
+#recipiente_grupos_aventura_selecionada {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    padding: .7% 10%;
+    gap: 2vh;
+}
+
+.recipiente_linha_grupo {
     display: flex;
     flex-direction: row;
 }
 
+.linha_grupo_esquerda {
+    flex: 1;
+}
+
+.linha_grupo_direita {
+    flex: 1;
+    text-align: center;
+    align-items: center;
+    align-content: center;
+}
+
+#recipiente_personagens_participantes {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+
 .recipiente_imagem_personagem_participante {
     position: relative;
-    height: 5vh;
+    height: 13vh;
     aspect-ratio: 1;
 }
 
@@ -58,14 +95,10 @@
     display: flex;
     flex-direction: column;
     height: 100%;
-    overflow: auto;
     flex: .2;
     padding: 1vh .5vw;
     gap: 2vh;
     background-color: #3122464D;
-    border-radius: 1vw;
-    scrollbar-width: none;
-    scrollbar-gutter: stable;
 }
 
 .recipiente_item_menu_aventuras {
@@ -89,65 +122,3 @@
     align-items: center;
     text-align: center;
 }
-
-/*  */
-/* 
-#recipiente_aventuras {
-    display: flex;
-    flex-direction: column;
-    width: 80%;
-    gap: 4vh;
-}
-
-.recipiente_geral_aventura {
-    display: flex;
-    flex-direction: column;
-    gap: .6vh;
-}
-
-.recipiente_aventura {
-    display: flex;
-    flex-direction: row;
-    height: 15vh;
-    gap: 2vw;
-}
-
-.recipiente_capa_aventura {
-    position: relative;
-    aspect-ratio: 16 / 9;
-}
-
-.recipiente_dados_aventura {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    gap: 1vh;
-    overflow: hidden;
-}
-
-.recipiente_dados_aventura_superior {
-    display: flex;
-    flex-direction: row;
-    gap: 3vw;
-}
-
-.recipiente_dados_aventura_superior h1 {
-    font-size: 3rem;
-    line-height: 2.8rem;
-}
-
-.recipiente_dados_aventura_inferior {
-    display: flex;
-    flex-direction: row;
-    height: 100%;
-}
-
-.recipiente_imagem_participante_aventura {
-    position: relative;
-    height: 100%;
-    aspect-ratio: 1 / 1;
-}
-
-.recipiente_grupos {
-    margin-left: 14.75vw;
-} */
