Implementando fluxo completo de: - Inclusão e Vinculo de link de Video/Podcast de Sessão pelo admin; - Navegação inicial por entre aventuras, suas sessões e seus links;

--- a/src/app/(paginas)/admin/styles.module.css
+++ b/src/app/(paginas)/admin/styles.module.css
@@ -10,6 +10,7 @@
 }
 
 #recipiente_conteudo_pagina_admin {
+    width: 38%;
     font-size: .8rem;
     font-weight: bolder;
     font-family: var(--fonte-junge) !important;
