--- a/src/app/(paginas)/aventura/[id]/styles.module.css
+++ b/src/app/(paginas)/aventura/[id]/styles.module.css
@@ -53,7 +53,7 @@
     border-radius: 5px;
     user-select: none;
 
-    &:hover {
+    &:not(.ativo):hover {
         box-shadow: 0px 0px 9px 0px #ffffff;
     }
 
