--- a/src/componentes/ElementosAssistirAventura/CorpoAssistindoGrupoAventura/styles.module.css
+++ b/src/componentes/ElementosAssistirAventura/CorpoAssistindoGrupoAventura/styles.module.css
@@ -6,6 +6,7 @@
     text-align: center;
     align-items: center;
     gap: 2vh;
+    border: 3px #312246b3 solid;
 }
 
 .recipiente_container_info_assistindo_grupo_aventura {
@@ -15,8 +16,17 @@
     padding: .6% 1%;
 }
 
+.recipiente_trailer_vazio {
+    width: auto;
+}
+
 .recipiente_trailer {
     aspect-ratio: 16 / 9;
     width: 57%;
+    box-shadow: 0px 4px 9px 4px #000000;
+}
+
+.recipiente_video {
+    width: 35%;
     box-shadow: 0px 4px 9px 4px #000000;
 }
