--- a/src/app/(paginas)/aventuras/styles.module.css
+++ b/src/app/(paginas)/aventuras/styles.module.css
@@ -105,7 +105,20 @@
     display: flex;
     flex-direction: row;
     gap: .3vw;
-    cursor: pointer;
+    user-select: none;
+
+    &:not(.ativo):hover {
+        box-shadow: 0px 0px 9px 0px #ffffff;
+    }
+
+    &.ativo {
+        color: #FBFF95;
+        background-color: #DBB4F84D;
+    }
+
+    &:not(.ativo):hover {
+        cursor: pointer;
+    }
 }
 
 .recipiente_imagem_aventura_item_menu {
