--- a/src/app/(paginas)/mestre/aventuras/styles.module.css
+++ b/src/app/(paginas)/mestre/aventuras/styles.module.css
@@ -23,6 +23,10 @@
     text-align: center;
     gap: .4vh;
     width: 20%;
+
+    &:not(.ativo):hover {
+        box-shadow: 0px 0px 9px 0px #ffffff;
+    }
 }
 
 .recipiente_item_imagem_aventura_mestre h4 {
