--- a/src/componentes/ElementosAssistirAventura/CorpoAssistindoGrupoAventura/styles.module.css
+++ b/src/componentes/ElementosAssistirAventura/CorpoAssistindoGrupoAventura/styles.module.css
@@ -9,17 +9,17 @@
     border: 3px #312246b3 solid;
 }
 
-.recipiente_trailer_vazio {
+#recipiente_trailer_vazio {
     width: auto;
 }
 
-#recipiente_trailer {
+#recipiente_trailer, #recipiente_video {
     aspect-ratio: 16 / 9;
     width: 57%;
     box-shadow: 0px 4px 9px 4px #000000;
 }
 
-.recipiente_video {
+#recipiente_podcast {
     width: 35%;
     box-shadow: 0px 4px 9px 4px #000000;
 }
