--- a/src/app/(paginas)/aventuras/styles.module.css
+++ b/src/app/(paginas)/aventuras/styles.module.css
@@ -85,6 +85,13 @@
 
 }
 
+#recipiente_conteudo_selecionado {
+    display: flex;
+    flex-direction: column;
+    gap: 2vh;
+    align-items: center;
+}
+
 #recipiente_cabecalho_aventura_selecionada {
     display: flex;
     flex-direction: column;
@@ -98,9 +105,8 @@
 #recipiente_grupos_aventura_selecionada {
     display: flex;
     flex-direction: column;
-    width: 100%;
-    padding: .7% 10%;
-    gap: 2vh;
+    width: 50%;
+    gap: 1vh;
 }
 
 .recipiente_linha_grupo {
@@ -113,9 +119,6 @@
 }
 
 .linha_grupo_direita {
-    flex: 1;
-    text-align: center;
-    align-items: center;
     align-content: center;
 }
 
