--- a/src/app/(paginas)/mestre/aventura/styles.module.css
+++ b/src/app/(paginas)/mestre/aventura/styles.module.css
@@ -1,13 +1,14 @@
-.recipiente_cabecalho_pagina_aventura_mestre {
-    display: flex;
-    flex-direction: row;
-    gap: 2vw;
+#recipiente_capa_pagina_aventura_mestre {
+    position: relative;
+    aspect-ratio: 16 / 9;
+    width: 37%;
+    box-shadow: 0 4px 9px 4px #000;
 }
 
 #recipiente_imagem_capa_pagina_aventura_mestre {
     position: relative;
-    width: 30%;
-    aspect-ratio: 16 / 9;
+    width: 100%;
+    height: 100%;
 }
 
 #recipiente_dados_pagina_aventura_mestre {
