--- a/src/app/(paginas)/mestre/aventuras/styles.module.css
+++ b/src/app/(paginas)/mestre/aventuras/styles.module.css
@@ -14,6 +14,7 @@
     gap: 3vh 3vw;
     justify-content: space-evenly;
     align-content: flex-start;
+    padding: 1vh 0;
 }
 
 .recipiente_item_imagem_aventura_mestre {
