--- a/src/app/(paginas)/mestre/styles.module.css
+++ b/src/app/(paginas)/mestre/styles.module.css
@@ -25,7 +25,7 @@
     display: flex;
     flex-direction: column;
     height: 100%;
-    padding: 1% 2%;
+    padding: .5% 0;
     gap: 2vh;
     align-items: center;
 }
