Implementando LayoutContextualizadoPadrão Colocando as Paginas e SubPaginas de Mestre e Admin no novo LayoutContextualizadoPadrão

--- a/src/app/(paginas)/admin/aventura/styles.module.css
+++ b/src/app/(paginas)/admin/aventura/styles.module.css
@@ -25,3 +25,15 @@
     flex-wrap: wrap;
     white-space: nowrap;
 }
+
+.episodio_sem_nenhum_vinculo {
+    color: var(--cor-aviso);
+}
+
+.episodio_com_algum_vinculo {
+    color: var(--cor-atencao);
+}
+
+.episodio_completo_vinculo {
+    color: var(--cor-confirmacao);
+}
